[gd_scene load_steps=29 format=3 uid="uid://cwm44i7u0u6v8"]

[ext_resource type="Script" uid="uid://0tj34lxt2o34" path="res://source/character.gd" id="1_ouwh1"]
[ext_resource type="PackedScene" uid="uid://ckdkhtu4q6dy6" path="res://component/character_attr_synchronizer.tscn" id="2_0p03b"]
[ext_resource type="Texture2D" uid="uid://dcb2c6pvbgyl0" path="res://assets/default_sprite.png" id="2_noer3"]
[ext_resource type="PackedScene" uid="uid://bvn8k7m2p4q5r" path="res://component/texture_synchronizer.tscn" id="3_texture_sync"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ouwh1"]
properties/0/path = NodePath("Sprite2D:frame")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Sprite2D:flip_h")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:target_position")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("AnimationTree:parameters/Idle/blend_position")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("AnimationTree:anim_player")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("AnimationTree:advance_expression_base_node")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("AnimationTree:parameters/Run/blend_position")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:global_position")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("AnimationPlayer:current_animation")
properties/8/spawn = true
properties/8/replication_mode = 2
properties/9/path = NodePath(".:character_name")
properties/9/spawn = true
properties/9/replication_mode = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mgyxd"]
radius = 7.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l788v"]
radius = 4.0
height = 12.0

[sub_resource type="Animation" id="Animation_gqehw"]
resource_name = "IdleDown"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_tl8wf"]
resource_name = "IdleLeft"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jdrvx"]
resource_name = "IdleRight"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hwo1n"]
resource_name = "IdleUp"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_8gf3v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mgyxd"]
resource_name = "RunDown"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_mwjqb"]
resource_name = "RunLeft"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l788v"]
resource_name = "RunRight"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t71p0"]
resource_name = "RunUp"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqehw"]
_data = {
&"IdleDown": SubResource("Animation_gqehw"),
&"IdleLeft": SubResource("Animation_tl8wf"),
&"IdleRight": SubResource("Animation_jdrvx"),
&"IdleUp": SubResource("Animation_hwo1n"),
&"RESET": SubResource("Animation_8gf3v"),
&"RunDown": SubResource("Animation_mgyxd"),
&"RunLeft": SubResource("Animation_mwjqb"),
&"RunRight": SubResource("Animation_l788v"),
&"RunUp": SubResource("Animation_t71p0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l788v"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mgyxd"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8gf3v"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mwjqb"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_t71p0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_l788v")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_mgyxd")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_8gf3v")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_mwjqb")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gqehw"]
animation = &"RunDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tl8wf"]
animation = &"RunUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jdrvx"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hwo1n"]
animation = &"RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8flsu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gqehw")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_tl8wf")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jdrvx")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_hwo1n")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_luctb"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_t71p0")
states/Idle/position = Vector2(471.5, 53)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_8flsu")
states/Run/position = Vector2(600.5, 51)

[node name="character" type="CharacterBody2D"]
collision_layer = 2
input_pickable = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ouwh1")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ouwh1")

[node name="character_attr_synchronizer" parent="." instance=ExtResource("2_0p03b")]

[node name="texture_synchronizer" parent="." instance=ExtResource("3_texture_sync")]

[node name="process_target_timer" type="Timer" parent="."]

[node name="CoverArea" type="Area2D" parent="."]
visible = false
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoverArea"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_mgyxd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_noer3")
flip_h = true
hframes = 8
vframes = 3
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l788v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": SubResource("AnimationLibrary_gqehw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_luctb")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, -0.536512)
parameters/Run/blend_position = Vector2(0, -0.524523)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 12.0
navigation_layers = 2
path_postprocessing = 1
debug_enabled = true

[node name="unit_name" type="Label" parent="."]
offset_left = -50.0
offset_top = -34.0
offset_right = 50.0
offset_bottom = -17.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
